<resources>
    <string name="app_name">模拟点击</string>
    <string name="main_start">启动</string>
    <string name="add_event">新增事件</string>
    <string name="add_task">新增任务</string>
    <string name="capture">录制操作</string>
    <string name="start_task">开始</string>
    <string name="stop_task">停止</string>
    <string name="quit">退出</string>
    <string name="preview">预览</string>
    <string name="back">返回上级</string>
    <string name="manage">管理</string>
    <string name="system_alert_window_permission_title">需要打开悬浮窗权限</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="missing_necessary_permissions">缺少必要的权限</string>
    <string name="add_event_hint">在屏幕上点击或者滑动</string>
    <string name="add_new_gesture">新增事件</string>
    <string name="gesture_name">事件名称:</string>
    <string name="default_gesture_name">我的事件</string>
    <string name="invalid_gesture">识别事件出错，请重新添加</string>
    <string name="add_complete">添加并返回</string>
    <string name="accessibility_service_description">模拟手势事件</string>
    <string name="open_accessibility_failed">打开辅助功能失败，请手动打开</string>
    <string name="check_accessibility_failed">检查辅助功能权限失败，请确保App已经开启辅助功能权限</string>
    <string name="click_to_start_preview">开始预览</string>
    <string name="click_to_stop_preview">停止预览</string>
    <string name="click_to_quit_preview">退出预览</string>
    <string name="current_display_gesture">当前手势:%s</string>
    <string name="current_display_task">当前任务:%s</string>
    <string name="task_execute_count">当前任务执行次数:%d</string>
    <string name="task_title">任务名称:</string>
    <string name="task_step">任务执行步骤:</string>
    <string name="click_to_add_step">添加步骤</string>
    <string name="click_to_add_delay">延时</string>
    <string name="input_delay_duration">输入延迟时间，单位毫秒</string>
    <string name="delay_duration">延时%d毫秒</string>
    <string name="save">保存</string>
    <string name="input_task_name">请输入任务名称</string>
    <string name="select_task">选择任务</string>
    <string name="delete_task">删除任务？</string>
    <string name="execute_task">执行任务？</string>
    <string name="task_repeat">输入执行次数，默认无限次</string>
    <string name="recorder_task_name">录屏事件</string>
    <string name="create_task">创建任务</string>
    <string name="cycle_interval">循环间隔(毫秒):</string>
</resources>