<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#6f000000"
    android:useDefaultMargins="false">

    <TextView
        android:id="@+id/addEvent"
        style="@style/MainMenuItem"
        android:text="@string/add_event" />

    <TextView
        android:id="@+id/addTask"
        style="@style/MainMenuItem"
        android:text="@string/add_task" />

    <TextView
        android:id="@+id/capture"
        style="@style/MainMenuItem"
        android:visibility="gone"
        android:text="@string/capture" />

    <TextView
        android:id="@+id/start"
        style="@style/MainMenuItem"
        android:text="@string/start_task" />

    <TextView
        android:id="@+id/stop"
        style="@style/MainMenuItem"
        android:text="@string/stop_task" />

    <TextView
        android:id="@+id/preview"
        style="@style/MainMenuItem"
        android:text="@string/preview" />

    <TextView
        android:id="@+id/manage"
        style="@style/MainMenuItem"
        android:text="@string/manage" />

    <TextView
        android:id="@+id/back"
        style="@style/MainMenuItem"
        android:text="@string/back" />

    <TextView
        android:id="@+id/quit"
        style="@style/MainMenuItem"
        android:text="@string/quit" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="addEvent,addTask,capture,start,stop,preview,manage,back,quit"
        app:flow_maxElementsWrap="3"
        app:flow_wrapMode="aligned"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <!-- 垂直方向第一根分割线 -->
    <View
        style="@style/MainMenuItemVerticalDivider"
        android:layout_marginStart="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 垂直方向第二根分割线 -->
    <View
        style="@style/MainMenuItemVerticalDivider"
        android:layout_marginStart="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 水平方向第一根分割线 -->
    <View
        style="@style/MainMenuItemHorizontalDivider"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 水平方向第二根分割线 -->
    <View
        style="@style/MainMenuItemHorizontalDivider"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>