<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#7f000000"
    android:orientation="vertical"
    android:paddingHorizontal="12dp"
    android:paddingVertical="18dp"
    tools:layout_width="280dp">

    <TextView
        android:id="@+id/create_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_task"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_title"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_add_gesture_name"
            android:importantForAutofill="no"
            android:minWidth="120dp"
            android:padding="2dp"
            android:hint="@string/recorder_task_name"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="15sp"
            tools:ignore="LabelFor,TextFields" />
    </LinearLayout>

    <EditText
        android:id="@+id/repeat_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_add_gesture_name"
        android:hint="@string/task_repeat"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minWidth="150dp"
        android:padding="2dp"
        android:singleLine="true"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="14sp"
        tools:ignore="LabelFor,TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cycle_interval_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cycle_interval"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/cycle_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_add_gesture_name"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minWidth="120dp"
            android:padding="2dp"
            android:singleLine="true"
            android:text="1000"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="14sp"
            tools:ignore="LabelFor,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_add_gesture_btn"
            android:gravity="center"
            android:text="@string/negative"
            android:textColor="#ffffffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/save"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/shape_add_gesture_btn"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="#ffffffff"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>