<?xml version="1.0" encoding="utf-8"?>
<com.zw.yzk.mock.touch.widget.MyGestureOverLayView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gestureOverlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3f000000">

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"/>

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_event_hint"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirmGesture"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_add_gesture_group"
        android:padding="20dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_gesture"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/gesture_name"
            android:textColor="#ffffff"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/gesture_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_add_gesture_name"
            android:importantForAutofill="no"
            android:minWidth="150dp"
            android:padding="2dp"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            app:layout_constraintBottom_toBottomOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toTopOf="@+id/name"
            tools:ignore="LabelFor,TextFields" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_add_gesture_btn"
            android:gravity="center"
            android:paddingVertical="7dp"
            android:text="@string/negative"
            android:textColor="#9fffffff"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/confirm"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:background="@drawable/shape_add_gesture_btn"
            android:gravity="center"
            android:paddingVertical="7dp"
            android:text="@string/positive"
            android:textColor="#9fffffff"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel"
            app:layout_constraintTop_toTopOf="@+id/cancel" />

        <TextView
            android:id="@+id/complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_add_gesture_btn"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/add_complete"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.zw.yzk.mock.touch.widget.MyGestureOverLayView>