<?xml version="1.0" encoding="utf-8"?>
<com.zw.yzk.mock.touch.widget.MyGestureOverLayView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gestureOverlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3f000000">

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/startPreview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_add_gesture_btn"
            android:gravity="center"
            android:text="@string/click_to_start_preview"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/stopPreview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:background="@drawable/shape_add_gesture_btn"
            android:gravity="center"
            android:text="@string/click_to_stop_preview"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/quitPreview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_add_gesture_btn"
            android:gravity="center"
            android:text="@string/click_to_quit_preview"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/currentTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_display_gesture"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/currentGesture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_display_gesture"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/taskCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_display_gesture"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>
</com.zw.yzk.mock.touch.widget.MyGestureOverLayView>