<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#7f000000">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false" />

    <TextView
        android:id="@+id/add_task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/select_task"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/task_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/task_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_task_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/delete_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_start_task_confirm_dialog"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/delete_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_task"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cancel_delete"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_add_gesture_btn"
            android:gravity="center"
            android:text="@string/negative"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/confirm_delete"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delete_task" />

        <TextView
            android:id="@+id/confirm_delete"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/shape_add_gesture_btn"
            android:gravity="center"
            android:text="@string/positive"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_delete"
            app:layout_constraintTop_toTopOf="@+id/cancel_delete" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/execute_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_start_task_confirm_dialog"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/execute_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/execute_task"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cancel_execute"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_add_gesture_btn"
            android:gravity="center"
            android:text="@string/negative"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/confirm_execute"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/execute_task" />

        <TextView
            android:id="@+id/confirm_execute"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/shape_add_gesture_btn"
            android:gravity="center"
            android:text="@string/positive"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_execute"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_execute"
            app:layout_constraintTop_toTopOf="@+id/cancel_execute" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>